--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def channel(chanInput):\n",
     "    chanInput = np.clip(chanInput,-1,1)\n",
     "    erasedIndex = np.random.randint(3)\n",
+    "    print(\"ERASED INDEX IS \", erasedIndex)\n",
     "    chanInput[erasedIndex:len(chanInput):3] = 0\n",
     "    return chanInput + np.sqrt(10)*np.random.randn(len(chanInput))\n",
     "\n",
@@ -53,14 +54,6 @@
     "    chanInput[erasedIndex:len(chanInput):3] = 0\n",
     "    return chanInput\n",
     "    \n",
-    "\"\"\"\n",
-    "Takes an input in [0,3] and returns the corresponding codeword\n",
-    "\n",
-    "\"\"\"\n",
-    "def create_code(i):\n",
-    "    codebook = {0:[1,1,1,1,1,1],1:[-1,-1,-1,-1,-1,-1]}\n",
-    "    return np.array(codebook[i])\n",
-    "\n",
     "\n",
     "\n",
     "def getbits(num):\n",
@@ -72,14 +65,15 @@
     "\"\"\"\n",
     "\n",
     "\"\"\"\n",
-    "def encode(input):\n",
+    "def encode(input,codebook):\n",
     "    arr = np.array(bytearray(input, 'utf-8')).astype('int')\n",
     "    output = np.empty\n",
     "    for i in range(len(arr)):\n",
     "        num = arr[i]\n",
     "        bits = getbits(num)\n",
     "        for j in range(8):\n",
-    "            output = np.hstack((output,create_code(bits[j])))\n",
+    "            codeword = np.array(codebook[bits[j]])\n",
+    "            output = np.hstack((output,codeword))\n",
     "        \n",
     "    #remove empty in the beginning\n",
     "    return output[1:]\n",
@@ -87,8 +81,6 @@
     "\n",
     "def decode_from_codeword(arr):\n",
     "    \n",
-    "    if(len(arr) != 6):\n",
-    "        raise ValueError(\"wrong length, should be 6\")\n",
     "    \n",
     "    for j in range(len(arr)):\n",
     "        if arr[j] == 1:\n",
@@ -129,13 +121,14 @@
     "This function takes a noisy real-valued 1D np.array of size (8*6)k \n",
     "It assumes that a third of the coordinates were erased and that there's Gaussian Noise of mean 0 and variance 10\n",
     "\"\"\" \n",
-    "def prediction(input):\n",
+    "def prediction(input, codebook):\n",
     "    \n",
     "    erasedIndex = predict_erased(input)\n",
+    "    print(\"PREDICTED ERASED INDEX IS \", erasedIndex)\n",
     "    input[erasedIndex:len(input):3] = 0\n",
     "    \n",
-    "    c_0 = np.array([1,1,1,1,1,1])\n",
-    "    c_1 = np.array([-1,-1,-1,-1,-1,-1])\n",
+    "    c_0 = codebook[0]\n",
+    "    c_1 = codebook[1]\n",
     "    length = len(c_0)\n",
     "    \n",
     "    for i in range(0,input.size,length):\n",
@@ -152,10 +145,11 @@
     "This function takes a 1D np.array of size (8*6)k and returns the string.\n",
     "It assumes that input is {-1,1}^((8*6)k) with a third of the values being zero\n",
     "\"\"\"\n",
-    "def decode_after_prediction(input):\n",
+    "def decode_after_prediction(input,codebook):\n",
     "    output = []\n",
-    "    outer_step = 8*6\n",
-    "    inner_step = 6\n",
+    "    code_length = len(codebook[0])\n",
+    "    outer_step = 8*code_length\n",
+    "    inner_step = code_length\n",
     "    for i in range(0,input.size,outer_step):\n",
     "        bits = []\n",
     "        arr = input[i:i+outer_step]\n",
@@ -164,35 +158,194 @@
     "            \n",
     "        output.append(get_byte_from_arr(bits))\n",
     "            \n",
-    "    return str(bytearray(output),'utf-8')\n"
+    "    return str(bytearray(output),'utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0x9a in position 5: invalid start byte",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-70-1ebd51d69f97>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mencoded_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchannel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mencoded\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mencoded_loss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdecoded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecode_after_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecoded\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecoded\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-67-7cabb6b763f6>\u001b[0m in \u001b[0;36mdecode_after_prediction\u001b[1;34m(input)\u001b[0m\n\u001b[0;32m    125\u001b[0m         \u001b[0moutput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_byte_from_arr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbits\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbytearray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0x9a in position 5: invalid start byte"
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERASED INDEX IS  2\n",
+      "PREDICTED ERASED INDEX IS  2\n",
+      "asda@¦#°#@°@§#@#§hfasugvbvavàé¨éahsdffffffffffffpOWWR21048725§\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "input= 'asda@¦#°#@°@§#@#§hfasugvbvavàé¨é'\n",
-    "encoded = encode(input)\n",
+    "input='asda@¦#°#@°@§#@#§hfasugvbvavàé¨éahsdffffffffffffpoWWR21048725§'\n",
+    "code_length = 150\n",
+    "c_0 = [1 for x in range(code_length)]\n",
+    "c_1 = [-1 for x in range(code_length)]\n",
+    "codebook = {0:c_0,1:c_1}\n",
+    "encoded = encode(input,codebook)\n",
     "encoded_loss = channel(encoded)\n",
-    "pred = prediction(encoded_loss)\n",
-    "decoded = decode_after_prediction(pred)\n",
+    "pred = prediction(encoded_loss,codebook)\n",
+    "decoded = decode_after_prediction(pred,codebook)\n",
     "print(decoded)\n",
     "print(decoded==input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded = encode(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, -1, -1, -1, -1, -1, -1], dtype=object)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERASED INDEX IS  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "encoded_loss = channel(encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.0878181579679411, 3.7425516243894585, 1.4435508965388257,\n",
+       "       -1.7470074562080806, -4.235063152136654, 4.9281124867210035,\n",
+       "       2.907786866291487, -3.9577478942203332, 0.6820585413558796,\n",
+       "       -2.3820783571949997, -2.0241208423675836, -2.899222032575209,\n",
+       "       2.3149263654100047, -6.069114561814974, 2.051842447614904,\n",
+       "       -0.28051362226501575, -1.6985784542822937, -2.7754423682397062,\n",
+       "       0.5427252282231689, -2.3115568097410546, -0.6784140504578867,\n",
+       "       1.0042438661885635, 1.3233113125154958, -1.4390815110881896,\n",
+       "       -1.8065456741660761, 1.5180241804618055, 6.35530508148671,\n",
+       "       1.2788779929667315, 1.3304195292142262, -1.2808052105477472,\n",
+       "       -2.5584389377749353, 2.0829011260797525, -0.8126112925273041,\n",
+       "       1.3689044841341695, -3.6921991001611527, 0.28923184782704575,\n",
+       "       -3.0362761759780366, 3.969089109432583, -1.061513422070684,\n",
+       "       -3.5012293925075673, 2.0480871393613267, -1.8286588473922307,\n",
+       "       -0.5903458028600257, 3.292130282510856, 3.1675379881507606,\n",
+       "       6.6939764189498305, -0.580798091312869, 1.145738106718614],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erasedIndex = predict_erased(encoded_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erasedIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "       -1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1,\n",
+       "       -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, 1], dtype=object)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction(encoded_loss)"
    ]
   }
  ],
