--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -34,10 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Noisy channel\n",
+    "\"\"\"    \n",
     "def channel(chanInput):\n",
     "    chanInput = np.clip(chanInput,-1,1)\n",
     "    erasedIndex = np.random.randint(3)\n",
@@ -55,7 +58,9 @@
     "    return chanInput\n",
     "    \n",
     "\n",
-    "\n",
+    "\"\"\"\n",
+    "Return the array of bits given a number in [0,255]\n",
+    "\"\"\"\n",
     "def getbits(num):\n",
     "    bits = []\n",
     "    for i in range(7,-1,-1):\n",
@@ -63,7 +68,7 @@
     "    return bits\n",
     "\n",
     "\"\"\"\n",
-    "\n",
+    "Given a string, transforms into into its binary form and replaces each bit by its corresponding codeword\n",
     "\"\"\"\n",
     "def encode(input,codebook):\n",
     "    arr = np.array(bytearray(input, 'utf-8')).astype('int')\n",
@@ -79,6 +84,9 @@
     "    return output[1:]\n",
     "\n",
     "\n",
+    "\"\"\"\n",
+    "GIven a codeword, returns whether it was H=0  or H=1\n",
+    "\"\"\"\n",
     "def decode_from_codeword(arr):\n",
     "    \n",
     "    \n",
@@ -91,6 +99,9 @@
     "    raise ValueError(\"array isn't a valid codeword\")\n",
     "    \n",
     "\n",
+    "\"\"\"\n",
+    "Given an array of 8 bits, compute the corresponding byte\n",
+    "\"\"\"\n",
     "def get_byte_from_arr(arr):\n",
     "    if(len(arr) != 8):\n",
     "        raise ValueError(\"wrong length,should be 8\")\n",
@@ -102,10 +113,13 @@
     "    \n",
     "    return byte\n",
     "                     \n",
-    "\n",
+    "\"\"\"\n",
+    "predict the erased index \n",
+    "algo: argmin_{j}{sum over |Yi^2 where i is part of the group (Z/3Z) + j }\n",
+    "\"\"\"\n",
     "\n",
     "def predict_erased(input):\n",
-    "    input = np.absolute(input)\n",
+    "    input = input*input\n",
     "    min = np.inf\n",
     "    min_index= 0\n",
     "    \n",
@@ -117,9 +131,26 @@
     "\n",
     "    return min_index\n",
     "\n",
+    "def min_distance_prediction(arr,codebook):\n",
+    "    min = -np.inf\n",
+    "    min_index= 0\n",
+    "    \n",
+    "    for i in range(len(codebook.keys())):\n",
+    "        dist = np.dot(arr,codebook[i]) ##compute distance\n",
+    "        \n",
+    "        if dist > min:\n",
+    "            min = dist\n",
+    "            min_index = i\n",
+    "            \n",
+    "    return min_index\n",
+    "\n",
     "\"\"\"\n",
-    "This function takes a noisy real-valued 1D np.array of size (8*6)k \n",
-    "It assumes that a third of the coordinates were erased and that there's Gaussian Noise of mean 0 and variance 10\n",
+    "This function takes a noisy real-valued 1D np.array of size code_length*k, k positive integer\n",
+    "It assumes that a third of the coordinates were erased and that there's Gaussian Noise of mean 0 and variance 10.\n",
+    "\n",
+    "It first predicts the erased index and puts every such erased coordinate at 0.\n",
+    "\n",
+    "It then does minimum-distance decoding for sub_array of size code_length and replaces it by the found codeword\n",
     "\"\"\" \n",
     "def prediction(input, codebook):\n",
     "    \n",
@@ -127,17 +158,13 @@
     "    print(\"PREDICTED ERASED INDEX IS \", erasedIndex)\n",
     "    input[erasedIndex:len(input):3] = 0\n",
     "    \n",
-    "    c_0 = codebook[0]\n",
-    "    c_1 = codebook[1]\n",
-    "    length = len(c_0)\n",
+    "    code_length = len(codebook[0])\n",
     "    \n",
-    "    for i in range(0,input.size,length):\n",
-    "        sub_arr = input[i:i+length]\n",
+    "    for i in range(0,input.size,code_length):\n",
+    "        sub_arr = input[i:i+code_length]\n",
     "        \n",
-    "        if np.dot(sub_arr,c_0) >= np.dot(sub_arr,c_1):\n",
-    "            input[i:i+length] = c_0\n",
-    "        else:\n",
-    "            input[i:i+length] = c_1\n",
+    "        predicted_index = min_distance_prediction(sub_arr,codebook)\n",
+    "        input[i:i+code_length] = codebook[predicted_index]\n",
     "            \n",
     "    return input\n",
     "    \n",
@@ -181,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 272,
    "metadata": {
     "scrolled": true
    },
@@ -192,14 +219,14 @@
      "text": [
       "ERASED INDEX IS  2\n",
       "PREDICTED ERASED INDEX IS  2\n",
-      "asda@¦#°#@°@§#@#§hfasugvbvavàé¨éahsdffffffffffffpOWWR21048725§\n",
+      "asda@¦#²#@°@§#@#§hFasug6bvavàé¨éihsdfbffffffbfffpoWWRr1048725§\n",
       "False\n"
      ]
     }
    ],
    "source": [
     "input='asda@¦#°#@°@§#@#§hfasugvbvavàé¨éahsdffffffffffffpoWWR21048725§'\n",
-    "code_length = 150\n",
+    "code_length = 100\n",
     "c_0 = [1 for x in range(code_length)]\n",
     "c_1 = [-1 for x in range(code_length)]\n",
     "codebook = {0:c_0,1:c_1}\n",
@@ -328,24 +355,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr =np.array([-1 for x in range(4)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
-       "       -1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1,\n",
-       "       -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, 1], dtype=object)"
+       "array([1, 1, 1, 1])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prediction(encoded_loss)"
+    "arr*arr"
    ]
   }
  ],
