Implements the recovering from noisy erasure channel

--- a/client_main.ipynb
+++ b/client_main.ipynb
@@ -17,9 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1082,
+   "execution_count": 768,
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "import numpy as np"
    ],
    "metadata": {
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1083,
+   "execution_count": 769,
    "outputs": [],
    "source": [
     "def string_to_bitarray(string):\n",
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1084,
+   "execution_count": 770,
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +86,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1085,
+   "execution_count": 771,
+   "outputs": [],
+   "source": [
+    "def bitarray_to_int(bitarray):\n",
+    "    # the format for putting one bit in a string\n",
+    "    string = \"{0:0\"+str(1)+\"b}\"\n",
+    "    integer = ''\n",
+    "    for bit in bitarray:\n",
+    "        integer += string.format(bit)\n",
+    "    return int(integer,2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 772,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bitarray_to_int([1,1,0]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 773,
    "outputs": [],
    "source": [
     "def bitarray_to_string(bitarray):\n",
@@ -124,13 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1086,
+   "execution_count": 774,
    "outputs": [
     {
      "data": {
       "text/plain": "'Hello World 😃'"
      },
-     "execution_count": 1086,
+     "execution_count": 774,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1087,
+   "execution_count": 775,
    "outputs": [],
    "source": [
     "def compute_parity_check(bitarray_1, bitarray_2):\n",
@@ -196,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1088,
+   "execution_count": 776,
    "outputs": [
     {
      "name": "stdout",
@@ -248,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1089,
+   "execution_count": 777,
    "outputs": [],
    "source": [
     "def interleave_codewords_to_send(codeword_1, codeword_2, parity_check_encoded):\n",
@@ -264,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1090,
+   "execution_count": 778,
    "outputs": [
     {
      "name": "stdout",
@@ -306,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1091,
+   "execution_count": 779,
    "outputs": [],
    "source": [
     "# the channel input is the array of interleaved codewords and their parity check\n",
@@ -339,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1092,
+   "execution_count": 780,
    "outputs": [],
    "source": [
     "def encode(bitarray):\n",
@@ -363,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1093,
+   "execution_count": 781,
    "outputs": [
     {
      "name": "stdout",
@@ -408,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1094,
+   "execution_count": 782,
    "outputs": [],
    "source": [
     "# the triplet contains 2 codewords encoding k bits and the codeword encoding the parity check bits\n",
@@ -429,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1095,
+   "execution_count": 783,
    "outputs": [],
    "source": [
     "# gives both correctly decoded codewords and the value of H observed (the modulus class of erased coordinate)\n",
@@ -461,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1096,
+   "execution_count": 784,
    "outputs": [],
    "source": [
     "# decoded contains both correctly decoded codewords (can be information codeword and parity or 2 information codewords)\n",
@@ -506,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1097,
+   "execution_count": 785,
    "outputs": [
     {
      "name": "stdout",
@@ -563,16 +607,411 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Recovering from noise\n",
+    "The problem states that each received symbol $Y_i=\\tilde{X}_i+Z_i$ where $\\tilde{X}_i$ is the symbol after passing\n",
+    "the **erasing channel** and $Z_i\\sim \\mathcal{N}(0,10)$ is the added **White Gaussian Noise**.\n",
+    "To deal with the erasures, we'll apply the same procedure as above (that works fine also on other codebooks).\n",
+    "However, the white noise need to be tackled smartly considering its high variance, and the low energy of channel input.\n",
+    "\n",
+    "To do so, we choose as our codebook the **Orthogonal Code $C_k$** which has a high distance between codewords for\n",
+    "reasonable amount of energy and is pretty simple to generate.\n",
+    "\n",
+    "We recall the recursive $C_k$ definition:\n",
+    "* $C_0=\\{1\\}$\n",
+    "* $C_{k+1}=C_k'$ where $C_k'$ is such that for every $c\\in C_k$, $(c,c)$ and $(c,-c) \\in C_k'$\n",
+    "* e.g.: $C_1=\\{(1,1),(1,-1)\\}$, $C_2=\\{(1,1,1,1),(1,1,-1,-1),(1,-1,1,-1),(1,-1,-1,1)\\}$ ..."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1097,
+   "execution_count": 786,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def create_c_k(k):\n",
+    "    c_0 = 1\n",
+    "    c_k = [c_0]\n",
+    "    for i in range(1,k+1):\n",
+    "        c_k_1 = []\n",
+    "        for codeword in c_k:\n",
+    "            c_c = np.array([[codeword, codeword]]).flatten()\n",
+    "            c_min_c = np.array([[codeword, -1*codeword]]).flatten()\n",
+    "            c_k_1.append(c_c)\n",
+    "            c_k_1.append(c_min_c)\n",
+    "        c_k = c_k_1.copy()\n",
+    "    return np.array(c_k)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 787,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  1  1  1]\n",
+      " [ 1  1 -1 -1]\n",
+      " [ 1 -1  1 -1]\n",
+      " [ 1 -1 -1  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we verify if c_2 was correctly computed\n",
+    "print(create_c_k(2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Combine parity check and orthogonal coding\n",
+    "We now can create codewords associated to each k-plet of bits. Let's implement the encodng of a bitarray for a\n",
+    "parametrized value of k"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 788,
+   "outputs": [],
+   "source": [
+    "# Encodes both arrays of k bits with the orthogonal code and return encoded 2k bits and their k parity check bits\n",
+    "# encoded in 3 codewords\n",
+    "def encode_ortho(bitarray_1, bitarray_2):\n",
+    "    k = len(bitarray_1)\n",
+    "    if len(bitarray_1)!=len(bitarray_2):\n",
+    "        print(\"Error, both encoded bitarrays should have same length (length k)\")\n",
+    "        return\n",
+    "    # creates the indexes of those k bits (and their pcheck) in the codebook\n",
+    "    codeword_1_index = bitarray_to_int(bitarray_1)\n",
+    "    codeword_2_index = bitarray_to_int(bitarray_2)\n",
+    "    parity_check = compute_parity_check(bitarray_1, bitarray_2)\n",
+    "    codeword_check_index = bitarray_to_int(parity_check)\n",
+    "\n",
+    "    codebook = create_c_k(k)\n",
+    "\n",
+    "    return codebook[codeword_1_index],codebook[codeword_2_index],codebook[codeword_check_index]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We try to encode the $10$ and $01$ bits pairs. We then have $k=2$ and use $C_2$. Their parity check bits are $11$. We\n",
+    " should then have the codewords $3$, $2$ and $4$ of $C_2$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 789,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -1, 1, -1]\n",
+      "[1, 1, -1, -1]\n",
+      "[1, -1, -1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cw in encode_ortho([1,0],[0,1]):\n",
+    "    print(list(cw))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Simulate the erasing noisy channel\n",
+    "We create the channel that outputs $Y_i$. For testing purposes, we make it return the realization of the erased symbol"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 790,
+   "outputs": [],
+   "source": [
+    "def noisy_erasing_channel(chan_input):\n",
+    "    chan_input = np.clip(chan_input,-1,1)\n",
+    "    erased_index = np.random.randint(3)\n",
+    "    chan_input[erased_index:len(chan_input):3] = 0\n",
+    "    return chan_input + np.sqrt(10)*np.random.randn(len(chan_input)), erased_index"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Decoding procedure\n",
+    "The decoding will happen following:\n",
+    "1. We uninterleave the received symbols\n",
+    "2. We compute the empirical mean of each codewords classes (the codewords placed $0^{th}[3]$, $1^{st}[3]$ and\n",
+    "$2^{nd}[3]$ in the codewords sequence)\n",
+    "    * The mean closest to 0 represents the class of erased codewords\n",
+    "3. For the unerased (but noisy) channel outputs, we compute their scalar product with every codeword of $C_k$\n",
+    "    * The highest product is the one with the most similar codewords, we interpret the noisy channel output as being\n",
+    "    this symbol\n",
+    "4. We decode the decided codewords and use them to compute (with parity check) the erased codeword\n",
+    "\n",
+    "#### Finding the erased coordinate"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 791,
+   "outputs": [],
+   "source": [
+    "def find_erased_noisy(uninterleaved_chan_output, k):\n",
+    "    n = 2**k\n",
+    "    # We divide out output in arrays of length n (each represent a codeword)\n",
+    "    output_symbols = np.array_split(np.array(uninterleaved_chan_output), len(uninterleaved_chan_output)//n)\n",
+    "\n",
+    "    mean_0 = mean_1 = mean_2 = 0.\n",
+    "    for i,codeword in enumerate(output_symbols):\n",
+    "        # we are interested in computing the distance from 0 to mean\n",
+    "        # we have to sum the squared output symbols\n",
+    "        # (as codewords input have zero mean w/out absolute distance computation)\n",
+    "        if i%3 == 0:\n",
+    "            mean_0 += np.sum(codeword**2)\n",
+    "        if i%3 == 1:\n",
+    "            mean_1 += np.sum(codeword**2)\n",
+    "        if i%3 == 2:\n",
+    "            mean_2 += np.sum(codeword**2)\n",
+    "\n",
+    "    # As all means should be computed by dividing by the same number, we don't make that extra computation that does\n",
+    "    # not changes the order\n",
+    "    if abs(mean_0) < abs(mean_1) and abs(mean_0) < abs(mean_2):\n",
+    "        return 0\n",
+    "    if abs(mean_1) < abs(mean_0) and abs(mean_1) < abs(mean_2):\n",
+    "        return 1\n",
+    "    if abs(mean_2) < abs(mean_1) and abs(mean_2) < abs(mean_0):\n",
+    "        return 2\n",
+    "    return np.random.randint(3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We try to find the erased codeword when noise is added. We'll again use $C_2$ codebook for testing:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 792,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Codeword 1:      [1, -1, 1, -1]\n",
+      "Codeword 2:      [1, 1, -1, -1]\n",
+      "Codeword 3:      [1, -1, -1, 1]\n",
+      "Uninterleaved:   [ 2.78821879 -7.06091086  2.86357522  1.30166846 -1.14177039  5.53459122\n",
+      "  3.12911533 -0.09558056 -2.66691314 -1.34220512 -6.36761939  2.52022946]\n",
+      "Erased predict:  1\n",
+      "Erased real:     1\n"
+     ]
+    }
+   ],
+   "source": [
+    "cw_1, cw_2, cw_3 = encode_ortho([1,0],[0,1])\n",
+    "print(\"Codeword 1:     \",list(cw_1))\n",
+    "print(\"Codeword 2:     \",list(cw_2))\n",
+    "print(\"Codeword 3:     \",list(cw_3))\n",
+    "interleaved_C2 = interleave_codewords_to_send(cw_1, cw_2, cw_3)\n",
+    "\n",
+    "chan_output_1, erased_index = noisy_erasing_channel(interleaved_C2)\n",
+    "\n",
+    "uninterleaved_C2 = uninterleave_codewords_received(chan_output_1)\n",
+    "print(\"Uninterleaved:  \",uninterleaved_C2)\n",
+    "\n",
+    "erased_found = find_erased_noisy(uninterleaved_C2, 2)\n",
+    "print(\"Erased predict: \",erased_found)\n",
+    "print(\"Erased real:    \",erased_index)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We see that the prediction is pretty bad. Indeed, this method relies on the fact that a huge number of realizations\n",
+    "will reveal the global mean.\n",
+    "\n",
+    "12 channel outputs is not enough to approximate the mean.\n",
+    "\n",
+    "We try to send more codewords through our channel:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 793,
+   "outputs": [],
+   "source": [
+    "# defines a sending/receiving protocol and outputs the erased prediction and real values\n",
+    "def test_erasure_recovery(nb_triplets_to_send):\n",
+    "    interleaved_to_send = []\n",
+    "    for i in range(nb_triplets_to_send):\n",
+    "        cw_1, cw_2, cw_3 = encode_ortho([i%2,(i+1)%2],[(i+1)%2,i%2])\n",
+    "        interleaved_to_send.append(interleave_codewords_to_send(cw_1, cw_2, cw_3))\n",
+    "    interleaved_to_send = np.array(interleaved_to_send).flatten()\n",
+    "\n",
+    "    chan_output_2, erased_real = noisy_erasing_channel(interleaved_to_send)\n",
+    "\n",
+    "    uninterleaved_received = []\n",
+    "    # we split back our array in triplets_to_send (which makes it contains codewords triplets at each element)\n",
+    "    output_triplets = np.array_split(np.array(chan_output_2),nb_triplets_to_send)\n",
+    "    for triplet in output_triplets:\n",
+    "        uninterleaved_received.append(uninterleave_codewords_received(triplet))\n",
+    "    uninterleaved_received = np.array(uninterleaved_received).flatten()\n",
+    "\n",
+    "    erased_found = find_erased_noisy(uninterleaved_received, 2)\n",
+    "\n",
+    "    return erased_found,erased_real"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 794,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correctness ratio:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_success=nb_fails=0\n",
+    "\n",
+    "for test in range(100):\n",
+    "    erased_found_t,erased_real_t = test_erasure_recovery(1000)\n",
+    "    if erased_found_t == erased_real_t: nb_success+=1\n",
+    "    else: nb_fails+=1\n",
+    "\n",
+    "print(\"Correctness ratio: \",nb_success/(nb_success+nb_fails))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We finally observe that, using the channel for 3000 informations+parity check bits, we discover the erased coordinate\n",
+    " with very high probability."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Denoising the information codewords"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "execution_count": 795
   }
  ],
  "metadata": {
