Search for other parameters

--- a/client_main.ipynb
+++ b/client_main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 305,
    "outputs": [],
    "source": [
     "import random\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 306,
    "outputs": [],
    "source": [
     "def bitarray_to_int(bitarray):\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 307,
    "outputs": [
     {
      "name": "stdout",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 308,
    "outputs": [],
    "source": [
     "def int_to_bitarray(integer, nb_bits):\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 309,
    "outputs": [
     {
      "name": "stdout",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 310,
    "outputs": [],
    "source": [
     "def string_to_bitarray(string):\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 311,
    "outputs": [
     {
      "name": "stdout",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 312,
    "outputs": [],
    "source": [
     "def bitarray_to_string(bitarray):\n",
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 313,
    "outputs": [
     {
      "data": {
       "text/plain": "'Hello World 😃'"
      },
-     "execution_count": 9,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 314,
    "outputs": [],
    "source": [
     "def compute_parity_check(bitarray_1, bitarray_2):\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 315,
    "outputs": [
     {
      "name": "stdout",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 316,
    "outputs": [],
    "source": [
     "def interleave_codewords_to_send(codeword_1, codeword_2, parity_check_encoded):\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 317,
    "outputs": [
     {
      "name": "stdout",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 318,
    "outputs": [],
    "source": [
     "# the channel input is the array of interleaved codewords and their parity check\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 319,
    "outputs": [],
    "source": [
     "def encode(bitarray):\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 320,
    "outputs": [
     {
      "name": "stdout",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 321,
    "outputs": [],
    "source": [
     "# the triplet contains 2 codewords encoding k bits and the codeword encoding the parity check bits\n",
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 322,
    "outputs": [],
    "source": [
     "# gives both correctly decoded codewords and the value of H observed (the modulus class of erased coordinate)\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 323,
    "outputs": [],
    "source": [
     "# decoded contains both correctly decoded codewords (can be information codeword and parity or 2 information codewords)\n",
@@ -597,20 +597,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 324,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Channel input:     [-1, -1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1]\n",
-      "Channel output:    [-1, -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, 1, 0, 1, -1, 0, 1, -1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0]\n",
+      "Channel output:    [0, -1, -1, 0, 1, -1, 0, -1, -1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, 1, 1, 0, 1, -1, 0, 1, 1, 0, 1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, -1, 1, 0, 1, -1, 0, -1, 1, 0, -1, 1]\n",
       "\n",
       "Uninterleaved in:  [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
-      "Uninterleaved out: [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Uninterleaved out: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
       "\n",
-      "Decoded output:    [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
-      "Erased codeword:   2 [3]\n",
+      "Decoded output:    [0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1]\n",
+      "Erased codeword:   0 [3]\n",
       "\n",
       "Sent:              [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
       "Restored:          [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 325,
    "outputs": [],
    "source": [
     "def create_c_k(code_size):\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 326,
    "outputs": [
     {
      "name": "stdout",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 327,
    "outputs": [],
    "source": [
     "# Encodes both arrays of k bits with the orthogonal code and return encoded 2k bits and their k parity check bits\n",
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 328,
    "outputs": [
     {
      "name": "stdout",
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 329,
    "outputs": [],
    "source": [
     "def noisy_erasing_channel(chan_input):\n",
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 330,
    "outputs": [],
    "source": [
     "def find_erased_noisy(uninterleaved_chan_output, code_size):\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 331,
    "outputs": [
     {
      "name": "stdout",
@@ -944,10 +944,10 @@
       "Codeword 1:      [-1, 1, -1]\n",
       "Codeword 2:      [1, -1, -1]\n",
       "Codeword 3:      [-1, -1, 1]\n",
-      "Uninterleaved:   [ 3.25340497 -4.36818127 -0.0753755   0.59358913 -3.12771343 -1.81454994\n",
-      "  2.47519398 -0.52783785 -3.08844362]\n",
-      "Erased predict:  1\n",
-      "Erased real:     2\n"
+      "Uninterleaved:   [-1.6310778   0.99094295  0.82399164  0.24109768  4.5754249  -0.59840298\n",
+      "  3.17006527 -2.98522151  1.64260039]\n",
+      "Erased predict:  0\n",
+      "Erased real:     1\n"
      ]
     }
    ],
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 332,
    "outputs": [],
    "source": [
     "# defines a sending/receiving protocol and outputs the erased prediction and real values\n",
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 333,
    "outputs": [
     {
      "name": "stdout",
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 334,
    "outputs": [],
    "source": [
     "def decode_ortho(chan_output_1, chan_output_2, code_size, nb_bits_send):\n",
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 335,
    "outputs": [
     {
      "name": "stdout",
@@ -1171,7 +1171,10 @@
    "source": [
     "### Creating the whole procedure\n",
     "Now we have all the necessary building blocks to reproduce our channel. We must fine tune the parameters `code_size`\n",
-    "and `nb_bits_send` to reduce as much as possible the number of sent symbols while keeping the highest minimum\n",
+    "and `nb_bits_send` to reduce as much as possible the number of sent symbols (we must have `nb_symbols`$\\leq 60000$)\n",
+    "while keeping the\n",
+    "highest\n",
+    "minimum\n",
     "distance between every codeword."
    ],
    "metadata": {
@@ -1183,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 336,
    "outputs": [],
    "source": [
     "def whole_procedure(string, code_size, nb_bits_send):\n",
@@ -1249,24 +1252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 337,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent word:      Hello World is the CLIC event that aims at introducing students to IC Faculty !!\n",
-      "Received word:  Hello World is the CLIC event that aims at introducing students to IC Faculty !!\n",
+      "Sent word:      Hello World is the CLIC event that aims at introducing students to IC Faculty !!!\n",
+      "Received word:  Hello World is the CLIC event that aims at introducing students to IC Faculty !!!\n",
       "Are equal:      True\n",
-      "Symbols sent:   61200\n"
+      "Symbols sent:   55188\n"
      ]
     }
    ],
    "source": [
     "# this string is 80 char long\n",
-    "string_to_send = \"Hello World is the CLIC event that aims at introducing students to IC Faculty !!\"\n",
+    "string_to_send = \"Hello World is the CLIC event that aims at introducing students to IC Faculty !!\" + \"!\"\n",
     "print(\"Sent word:     \", string_to_send)\n",
-    "received_string, nb_symbols = whole_procedure(string_to_send, 8, 4)\n",
+    "received_string, nb_symbols = whole_procedure(string_to_send, 9, 9)\n",
     "print(\"Received word: \", received_string)\n",
     "print(\"Are equal:     \", string_to_send == received_string)\n",
     "print(\"Symbols sent:  \", nb_symbols)"
@@ -1280,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 338,
    "outputs": [
     {
      "name": "stdout",
